crates/marmot-c/include/marmot.h

typedef enum MarmotStatus MarmotStatus;
typedef int32_t MarmotStatus;
typedef enum MarmotMarkdownCodeBlockKind {
  MARMOT_MARKDOWN_CODE_BLOCK_KIND_INDENTED,
  MARMOT_MARKDOWN_CODE_BLOCK_KIND_FENCED,
} MarmotMarkdownCodeBlockKind;
typedef struct MarmotClient MarmotClient;
typedef struct MarmotAccountSummary {
  char *label;
  char *account_id_hex;
  bool local_signing;
  bool external_signing;
  bool signed_out;
  bool running;
} MarmotAccountSummary;
typedef struct MarmotAccountSummaryList {
  struct MarmotAccountSummary *items;
  uintptr_t len;
} MarmotAccountSummaryList;
typedef struct MarmotStringList {
  char **items;
  uintptr_t len;
} MarmotStringList;
typedef enum MarmotMarkdownInline_Tag {
  MARMOT_MARKDOWN_INLINE_TEXT,
  MARMOT_MARKDOWN_INLINE_SOFT_BREAK,
  MARMOT_MARKDOWN_INLINE_HARD_BREAK,
  MARMOT_MARKDOWN_INLINE_CODE,
  MARMOT_MARKDOWN_INLINE_EMPH,
  MARMOT_MARKDOWN_INLINE_STRONG,
  MARMOT_MARKDOWN_INLINE_STRIKETHROUGH,
  MARMOT_MARKDOWN_INLINE_LINK,
  MARMOT_MARKDOWN_INLINE_IMAGE,
  MARMOT_MARKDOWN_INLINE_AUTOLINK,
  MARMOT_MARKDOWN_INLINE_MATH,
  MARMOT_MARKDOWN_INLINE_NOSTR_MENTION,
  MARMOT_MARKDOWN_INLINE_NOSTR_URI,
} MarmotMarkdownInline_Tag;
typedef struct MarmotMarkdownInline_Text_Body {
  char *content;
} MarmotMarkdownInline_Text_Body;
typedef struct MarmotMarkdownInline_Code_Body {
  char *content;
} MarmotMarkdownInline_Code_Body;
typedef struct MarmotMarkdownInline_Emph_Body {
  struct MarmotMarkdownInline *children;
  uintptr_t children_len;
} MarmotMarkdownInline_Emph_Body;
typedef struct MarmotMarkdownInline_Strong_Body {
  struct MarmotMarkdownInline *children;
  uintptr_t children_len;
} MarmotMarkdownInline_Strong_Body;
typedef struct MarmotMarkdownInline_Strikethrough_Body {
  struct MarmotMarkdownInline *children;
  uintptr_t children_len;
} MarmotMarkdownInline_Strikethrough_Body;
typedef struct MarmotMarkdownInline_Link_Body {
  char *dest;
  char *title;
  struct MarmotMarkdownInline *children;
  uintptr_t children_len;
  enum MarmotMarkdownLinkDestinationKind classification;
} MarmotMarkdownInline_Link_Body;
typedef struct MarmotMarkdownInline_Image_Body {
  char *dest;
  char *title;
  struct MarmotMarkdownInline *alt;
  uintptr_t alt_len;
  enum MarmotMarkdownLinkDestinationKind classification;
} MarmotMarkdownInline_Image_Body;
typedef struct MarmotMarkdownInline_Autolink_Body {
  char *url;
  enum MarmotMarkdownAutolinkKind kind;
  enum MarmotMarkdownLinkDestinationKind classification;
} MarmotMarkdownInline_Autolink_Body;
typedef struct MarmotMarkdownInline_Math_Body {
  char *content;
} MarmotMarkdownInline_Math_Body;
typedef struct MarmotMarkdownInline_NostrMention_Body {
  struct MarmotMarkdownNostrEntity entity;
} MarmotMarkdownInline_NostrMention_Body;
typedef struct MarmotMarkdownInline_NostrUri_Body {
  struct MarmotMarkdownNostrEntity entity;
} MarmotMarkdownInline_NostrUri_Body;
typedef struct MarmotMarkdownInline {
  MarmotMarkdownInline_Tag tag;
  union {
    MarmotMarkdownInline_Text_Body TEXT;
    MarmotMarkdownInline_Code_Body CODE;
    MarmotMarkdownInline_Emph_Body EMPH;
    MarmotMarkdownInline_Strong_Body STRONG;
    MarmotMarkdownInline_Strikethrough_Body STRIKETHROUGH;
    MarmotMarkdownInline_Link_Body LINK;
    MarmotMarkdownInline_Image_Body IMAGE;
    MarmotMarkdownInline_Autolink_Body AUTOLINK;
    MarmotMarkdownInline_Math_Body MATH;
    MarmotMarkdownInline_NostrMention_Body NOSTR_MENTION;
    MarmotMarkdownInline_NostrUri_Body NOSTR_URI;
  };
} MarmotMarkdownInline;
typedef struct MarmotMarkdownListKind {
  MarmotMarkdownListKind_Tag tag;
  union {
    MarmotMarkdownListKind_Bullet_Body BULLET;
    MarmotMarkdownListKind_Ordered_Body ORDERED;
  };
} MarmotMarkdownListKind;
typedef struct MarmotMarkdownListItem {
  struct MarmotMarkdownBlock *blocks;
  uintptr_t blocks_len;
  bool has_checked;
  bool checked;
  uint8_t *blank_lines_before;
  uintptr_t blank_lines_before_len;
} MarmotMarkdownListItem;
typedef enum MarmotMarkdownBlock_Tag {
  MARMOT_MARKDOWN_BLOCK_PARAGRAPH,
  MARMOT_MARKDOWN_BLOCK_HEADING,
  MARMOT_MARKDOWN_BLOCK_THEMATIC_BREAK,
  MARMOT_MARKDOWN_BLOCK_CODE_BLOCK,
  MARMOT_MARKDOWN_BLOCK_BLOCK_QUOTE,
  MARMOT_MARKDOWN_BLOCK_LIST_BLOCK,
  MARMOT_MARKDOWN_BLOCK_TABLE,
  MARMOT_MARKDOWN_BLOCK_MATH_BLOCK,
  MARMOT_MARKDOWN_BLOCK_DETAILS,
} MarmotMarkdownBlock_Tag;
typedef struct MarmotMarkdownBlock_Paragraph_Body {
  struct MarmotMarkdownInline *inlines;
  uintptr_t inlines_len;
} MarmotMarkdownBlock_Paragraph_Body;
typedef struct MarmotMarkdownBlock_Heading_Body {
  uint8_t level;
  struct MarmotMarkdownInline *inlines;
  uintptr_t inlines_len;
} MarmotMarkdownBlock_Heading_Body;
typedef struct MarmotMarkdownBlock_CodeBlock_Body {
  enum MarmotMarkdownCodeBlockKind kind;
  char *info;
  char *content;
} MarmotMarkdownBlock_CodeBlock_Body;
typedef struct MarmotMarkdownBlock_BlockQuote_Body {
  struct MarmotMarkdownBlock *blocks;
  uintptr_t blocks_len;
  uint8_t *blank_lines_before;
  uintptr_t blank_lines_before_len;
} MarmotMarkdownBlock_BlockQuote_Body;
typedef struct MarmotMarkdownBlock_ListBlock_Body {
  struct MarmotMarkdownListKind kind;
  bool tight;
  struct MarmotMarkdownListItem *items;
  uintptr_t items_len;
} MarmotMarkdownBlock_ListBlock_Body;
typedef struct MarmotMarkdownBlock_Table_Body {
  enum MarmotMarkdownAlignment *alignments;
  uintptr_t alignments_len;
  struct MarmotMarkdownTableCell *header;
  uintptr_t header_len;
  struct MarmotMarkdownTableRow *rows;
  uintptr_t rows_len;
} MarmotMarkdownBlock_Table_Body;
typedef struct MarmotMarkdownBlock_MathBlock_Body {
  char *content;
} MarmotMarkdownBlock_MathBlock_Body;
typedef struct MarmotMarkdownBlock_Details_Body {
  struct MarmotMarkdownDetails *details;
} MarmotMarkdownBlock_Details_Body;
typedef struct MarmotMarkdownBlock {
  MarmotMarkdownBlock_Tag tag;
  union {
    MarmotMarkdownBlock_Paragraph_Body PARAGRAPH;
    MarmotMarkdownBlock_Heading_Body HEADING;
    MarmotMarkdownBlock_CodeBlock_Body CODE_BLOCK;
    MarmotMarkdownBlock_BlockQuote_Body BLOCK_QUOTE;
    MarmotMarkdownBlock_ListBlock_Body LIST_BLOCK;
    MarmotMarkdownBlock_Table_Body TABLE;
    MarmotMarkdownBlock_MathBlock_Body MATH_BLOCK;
    MarmotMarkdownBlock_Details_Body DETAILS;
  };
} MarmotMarkdownBlock;
typedef struct MarmotMarkdownDocument {
  struct MarmotMarkdownBlock *blocks;
  uintptr_t blocks_len;
  bool truncated;
  uint8_t *blank_lines_before;
  uintptr_t blank_lines_before_len;
} MarmotMarkdownDocument;
MarmotStatus marmot_client_new(const char *root_path,
                               const char *const *relay_urls,
                               uintptr_t relay_urls_len,
                               struct MarmotClient **out_client);
MarmotStatus marmot_client_start(const struct MarmotClient *client);
MarmotStatus marmot_client_shutdown(const struct MarmotClient *client);
MarmotStatus marmot_client_is_stopping(const struct MarmotClient *client, bool *out_stopping);
void marmot_client_free(struct MarmotClient *client);
char *marmot_last_error_message(void);
void marmot_string_free(char *s);
MarmotStatus marmot_list_accounts(const struct MarmotClient *client,
                                  struct MarmotAccountSummaryList **out);
MarmotStatus marmot_create_identity(const struct MarmotClient *client,
                                    const char *const *default_relays,
                                    uintptr_t default_relays_len,
                                    const char *const *bootstrap_relays,
                                    uintptr_t bootstrap_relays_len,
                                    struct MarmotAccountSummary **out);
MarmotStatus marmot_account_nip65_relays(const struct MarmotClient *client,
                                         const char *account_ref,
                                         struct MarmotStringList **out);
MarmotStatus marmot_reveal_nsec(const struct MarmotClient *client,
                                const char *account_ref,
                                char **out);
MarmotStatus marmot_parse_markdown(const struct MarmotClient *client,
                                   const char *text,
                                   struct MarmotMarkdownDocument **out);
MarmotStatus marmot_npub(const struct MarmotClient *client, const char *account_id_hex, char **out);
void marmot_account_summary_free(struct MarmotAccountSummary *ptr);
void marmot_account_summary_list_free(struct MarmotAccountSummaryList *list);
void marmot_string_list_free(struct MarmotStringList *list);
void marmot_markdown_document_free(struct MarmotMarkdownDocument *ptr);